--- a/frontend/src/components/braveBishops/BraveBishops.scss
+++ b/frontend/src/components/braveBishops/BraveBishops.scss
@@ -37,8 +37,8 @@
 
 /* Responsive Styles */
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .eritrean-bishops {
     padding: 0 1rem;
     .eritrean-bishops-title {
@@ -53,8 +53,8 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .eritrean-bishops {
     padding: 0 2rem;
 
@@ -70,8 +70,8 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .eritrean-bishops {
     padding: 0 2rem;
 
@@ -87,8 +87,8 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .eritrean-bishops {
     padding: 0 2rem;
     .eritrean-bishops-title {
@@ -103,8 +103,8 @@
   }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (2560px and above) */
+@media (min-width: 1367px) {
   .eritrean-bishops {
     .eritrean-bishops-title {
       font-size: $afs * 1.2;
