--- a/frontend/src/components/news/masses/MassList.scss
+++ b/frontend/src/components/news/masses/MassList.scss
@@ -2,9 +2,9 @@
 @import "../../../styles/mixins.scss";
 
 .mass-list-container {
+  margin: 1rem 0;
   .mass-list-title {
     @include subTitle;
-    font-size: 1.5rem;
   }
 
   .mass-list-wrapper {
@@ -14,8 +14,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .mass-list-container {
     .mass-list-title {
       font-size: $nfs;
@@ -24,8 +24,8 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .mass-list-container {
     .mass-list-title {
       font-size: $nfs;
@@ -34,8 +34,8 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .mass-list-container {
     .mass-list-title {
       font-size: $afs * 1.2;
@@ -44,8 +44,8 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .mass-list-wrapper {
     @include twoGridTemplateEqualColumns;
     column-gap: 1rem;
@@ -53,8 +53,8 @@
   }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (2560px and above) */
+@media (min-width: 1367px) {
   .mass-list-wrapper {
     @include twoGridTemplateEqualColumns;
     column-gap: 1rem;
