--- a/frontend/src/components/parishPriest/allParishioners/AllParishioners.scss
+++ b/frontend/src/components/parishPriest/allParishioners/AllParishioners.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/mixins.scss";
 
 .priest-dashboard-parishioners-container {
-  width: $laptop;
+  width: $mobile;
   min-height: 100vh;
   margin: 1rem auto;
 
@@ -13,11 +13,9 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .priest-dashboard-parishioners-container {
-    width: $mobile;
-
     .parishioners-title {
       font-size: $nfs;
       padding: 0.2rem 0 1rem 0;
@@ -26,11 +24,9 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .priest-dashboard-parishioners-container {
-    width: $tablet;
-
     .parishioners-title {
       font-size: $afs;
       padding: 1rem;
@@ -39,21 +35,35 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .priest-dashboard-parishioners-container {
-    width: $laptop;
-
     .parishioners-title {
       font-size: $aafs;
+      padding: 1rem;
+      text-align: center;
     }
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .priest-dashboard-parishioners-container {
+    .parishioners-title {
+      font-size: $lfs;
+      padding: 1rem;
+      text-align: center;
+    }
+  }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
+  .priest-dashboard-parishioners-container {
+    .parishioners-title {
+      font-size: $lfs;
+      padding: 1rem;
+      text-align: center;
+    }
+  }
 }
