--- a/frontend/src/components/video/LastVideo.scss
+++ b/frontend/src/components/video/LastVideo.scss
@@ -7,12 +7,10 @@
 
   .video-preview-title {
     @include subTitle;
-    font-size: $aafs;
   }
 
   .video-description {
-    margin-bottom: 1rem;
-    font-size: $nfs;
+    @include paragraph;
   }
 
   .video-wrapper {
@@ -46,10 +44,8 @@
   }
 }
 
-/* Responsive Styles */
-
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .video-preview-container {
     display: flex;
     flex-direction: column;
@@ -57,12 +53,13 @@
     margin: 3rem 0;
 
     .video-preview-title {
-      font-size: $afs;
+      font-size: $nfs;
       text-align: center;
     }
 
     .video-description {
       font-size: $sfs;
+      line-height: 1.2rem;
       margin-bottom: 2rem;
     }
 
@@ -74,8 +71,8 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .video-preview-container {
     display: flex;
     flex-direction: column;
@@ -89,6 +86,7 @@
 
     .video-description {
       font-size: $sfs;
+      line-height: 1.3rem;
       margin-bottom: 2rem;
     }
 
@@ -100,8 +98,8 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .video-preview-container {
     display: flex;
     flex-direction: column;
@@ -120,8 +118,8 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .video-preview-container {
     @include shadow1;
     display: grid;
@@ -159,8 +157,8 @@
   }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (2560px and above) */
+@media (min-width: 1367px) {
   .video-preview-container {
     @include shadow1;
     display: grid;
@@ -169,14 +167,13 @@
     grid-template-areas:
       "title title"
       "description video";
-    margin-top: 3rem;
+    margin: 3rem 0;
 
     .video-preview-title {
       grid-area: title;
       font-size: $aafs;
       font-weight: bold;
       padding: 0.5rem;
-      font-size: $afs * 1.2;
     }
 
     .video-wrapper {
@@ -193,7 +190,9 @@
 
     .video-description {
       font-size: $nfs;
-      line-height: 2rem;
+      line-height: 1.6rem;
     }
   }
 }
+
+
