--- a/frontend/src/styles/Variables.scss
+++ b/frontend/src/styles/Variables.scss
@@ -73,7 +73,9 @@ $radius: 4px;
 $borderColor: #ced4da;
 
 // Width View
-$desktop: 70%;
+$mobile: 90%;
+$mobileLandscape: 90%;
+$tablet: 85%;
 $laptop: 80%;
-$tablet: 90%;
-$mobile: 95%;
+$desktop: 70%;
+
