--- a/frontend/src/views/financePages/financeManagerPage/FinanceManagerPage.scss
+++ b/frontend/src/views/financePages/financeManagerPage/FinanceManagerPage.scss
@@ -3,30 +3,27 @@
 
 .financial-manager-page {
   .financial-manager-page-container {
+    min-height: 100vh;
     .financial-manager-page-title {
       @include title;
       background-color: $sidebar-bg;
     }
 
     .financial-manager-contents-wrapper {
-      width: 80%;
-      @include flexRow;
-      width: 100%;
+      @include flexColumn;
     }
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .financial-manager-page {
     .financial-manager-page-container {
       .financial-manager-page-title {
         font-size: $sfs;
-        background-color: $mobile-header-bg;
       }
 
       .financial-manager-contents-wrapper {
-        @include flexColumn;
         width: $mobile;
         margin: auto;
       }
@@ -34,26 +31,24 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .financial-manager-page {
     .financial-manager-page-container {
       .financial-manager-page-title {
         font-size: $nfs;
-        background-color: $mobile-header-bg;
       }
 
       .financial-manager-contents-wrapper {
-        @include flexColumn;
-        width: $tablet;
+        width: $mobileLandscape;
         margin: auto;
       }
     }
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .financial-manager-page {
     .financial-manager-page-container {
       .financial-manager-page-title {
@@ -62,7 +57,6 @@
       }
 
       .financial-manager-contents-wrapper {
-        @include flexColumn;
         width: $tablet;
         margin: auto;
       }
@@ -70,20 +64,34 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .financial-manager-page {
     .financial-manager-page-container {
-      min-height: 100vh;
+      .financial-manager-page-title {
+        font-size: $lfs;
+      }
+
+      .financial-manager-contents-wrapper {
+        margin: auto;
+      }
     }
   }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
   .financial-manager-page {
     .financial-manager-page-container {
       min-height: 100vh;
+      .financial-manager-page-title {
+        font-size: $lfs;
+      }
+
+      .financial-manager-contents-wrapper {
+        @include flexRow;
+        margin: auto;
+      }
     }
   }
 }
