--- a/frontend/src/components/about/parishPriest/ParishPriest.scss
+++ b/frontend/src/components/about/parishPriest/ParishPriest.scss
@@ -39,8 +39,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .parish-priest-wrapper {
     .parish-priest-title {
       font-size: $nfs;
@@ -72,8 +72,8 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .parish-priest-wrapper {
     .parish-priest-title {
       text-align: center;
@@ -106,8 +106,8 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .parish-priest-wrapper {
     .parish-priest-title {
       text-align: center;
@@ -141,8 +141,8 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .parish-priest-wrapper {
     .parish-priest-title {
     }
@@ -170,8 +170,8 @@
   }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (2560px and above) */
+@media (min-width: 1367px) {
   .parish-priest-wrapper {
     .parish-priest-title {
     }
