--- a/frontend/src/components/committees/committeeCard/CommitteeCard.scss
+++ b/frontend/src/components/committees/committeeCard/CommitteeCard.scss
@@ -49,8 +49,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .committee-card-container {
     flex-direction: column;
     margin-bottom: 2rem;
@@ -84,8 +84,8 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .committee-card-container {
     margin-top: 2rem;
 
@@ -113,8 +113,8 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .committee-card-container {
     margin-bottom: 3rem;
     .image-container {
@@ -141,8 +141,8 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .committee-card-container {
     .image-container {
       .image {
@@ -165,8 +165,8 @@
   }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (2560px and above) */
+@media (min-width: 1367px) {
   .committee-card-container {
     .image-container {
       .image {
