--- a/frontend/src/components/financeManager/finacialReports/FinancialReports.scss
+++ b/frontend/src/components/financeManager/finacialReports/FinancialReports.scss
@@ -3,7 +3,7 @@
 
 .financial-report-table-container {
   position: relative;
-  width: $laptop;
+  width: $mobile;
   margin: 2rem auto;
 
   .financial-report-table-title {
@@ -91,11 +91,10 @@
   align-items: center;
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .financial-report-table-container {
     position: relative;
-    width: $mobile;
 
     .financial-report-table-title {
       font-size: $nfs;
@@ -153,8 +152,68 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .financial-report-table-container {
+    position: relative;
+    width: $mobileLandscape;
+
+    .financial-report-table-title {
+      font-size: $afs;
+      margin: 1rem 0 5rem 0;
+      padding: 0;
+    }
+
+    .finance-report-table-form {
+      @include flexRow;
+      position: absolute;
+      top: 2.5rem;
+      left: 0;
+
+      .input-field {
+        width: 100%;
+        font-size: $nfs;
+      }
+
+      .finance-report-table-form-btn {
+        font-size: $nfs;
+      }
+    }
+
+    .add-new-report {
+      .add-new-report-title {
+        font-size: $nfs;
+      }
+
+      .add-new-report-btn {
+        font-size: $nfs;
+      }
+    }
+
+    .financial-report-delete-confirmation-wrapper {
+      .delete-confirmation-title {
+        font-size: $afs;
+      }
+
+      .delete-confirmation-statement {
+        font-size: $nfs;
+      }
+
+      .confirmation-buttons-wrapper {
+        .confirm-delete-btn {
+          font-size: $nfs;
+        }
+
+        .cancel-delete-btn {
+          font-size: $nfs;
+        }
+      }
+    }
+  }
+}
+
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .financial-report-table-container {
     position: relative;
     width: $tablet;
@@ -213,70 +272,27 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .financial-report-table-container {
+    width: $laptop;
+    margin: 1rem auto;
     position: relative;
-    width: $tablet;
 
     .financial-report-table-title {
-      font-size: $afs;
-      margin: 1rem 0 5rem 0;
-      padding: 0;
-    }
-
-    .finance-report-table-form {
-      @include flexRow;
-      position: absolute;
-      top: 2.5rem;
-      left: 0;
-
-      .input-field {
-        width: 100%;
-        font-size: $nfs;
-      }
-
-      .finance-report-table-form-btn {
-        font-size: $nfs;
-      }
-    }
-
-    .add-new-report {
-      .add-new-report-title {
-        font-size: $nfs;
-      }
-
-      .add-new-report-btn {
-        font-size: $nfs;
-      }
-    }
-
-    .financial-report-delete-confirmation-wrapper {
-      .delete-confirmation-title {
-        font-size: $afs;
-      }
-
-      .delete-confirmation-statement {
-        font-size: $nfs;
-      }
-
-      .confirmation-buttons-wrapper {
-        .confirm-delete-btn {
-          font-size: $nfs;
-        }
-
-        .cancel-delete-btn {
-          font-size: $nfs;
-        }
-      }
+      font-size: $lfs;
     }
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
-}
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
+  .financial-report-table-container {
+    width: $desktop;
+    margin: 1rem auto;
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+    .financial-report-table-title {
+      font-size: $lfs;
+    }
+  }
 }
