--- a/frontend/src/components/financeManager/financeManagerSidebar/FinanceMgtSidebar.scss
+++ b/frontend/src/components/financeManager/financeManagerSidebar/FinanceMgtSidebar.scss
@@ -90,8 +90,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .finance-manager-dashboard-sidebar-container {
     .finance-manager-dashboard-sidebar-wrapper {
       display: none;
@@ -99,8 +99,8 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .finance-manager-dashboard-sidebar-container {
     .finance-manager-dashboard-sidebar-wrapper {
       display: none;
@@ -108,8 +108,8 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .finance-manager-dashboard-sidebar-container {
     .finance-manager-dashboard-sidebar-wrapper {
       display: none;
@@ -117,18 +117,16 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+@media (min-width: 1024px) and (max-width: 1366px) {
   .finance-manager-dashboard-sidebar-container {
-    min-height: 100vh;
-    .finance-manager-hamburger-menu {
+    .finance-manager-dashboard-sidebar-wrapper {
       display: none;
     }
   }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
   .finance-manager-dashboard-sidebar-container {
     min-height: 100vh;
     .finance-manager-hamburger-menu {
