--- a/frontend/src/components/financeManager/summary/SummaryView.scss
+++ b/frontend/src/components/financeManager/summary/SummaryView.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/mixins.scss";
 
 .finance-mgt-summary-view {
-  width: $laptop;
+  width: $mobile;
   margin: 2rem auto;
 
   .finance-mgt-summary-view-title {
@@ -55,8 +55,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .finance-mgt-summary-view {
     width: $mobile;
     .finance-mgt-summary-view-title {
@@ -104,8 +104,57 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .finance-mgt-summary-view {
+    width: $mobileLandscape;
+    .finance-mgt-summary-view-title {
+      font-size: $afs;
+      text-align: center;
+    }
+    .members-contribution-pie-chart-container {
+      position: relative;
+
+      .members-contribution-pie-chart-title {
+        font-size: $nfs;
+        margin-top: 4rem;
+      }
+
+      .illustration {
+        font-size: $nfs;
+
+        .count-mark {
+          font-size: $nfs;
+        }
+      }
+
+      .members-contribution-pie-chart-form {
+        @include flexRow;
+        position: absolute;
+        top: -3rem;
+        left: 0;
+        .input-field {
+          font-size: $nfs;
+        }
+
+        .members-contribution-pie-chart-form-btn {
+          font-size: $nfs;
+        }
+      }
+
+      .message-error {
+        font-size: $nfs;
+      }
+    }
+
+    .recharts-legend-wrapper {
+      display: none;
+    }
+  }
+}
+
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .finance-mgt-summary-view {
     width: $tablet;
     .finance-mgt-summary-view-title {
@@ -135,12 +184,10 @@
         left: 0;
         .input-field {
           font-size: $nfs;
-      
         }
 
         .members-contribution-pie-chart-form-btn {
           font-size: $nfs;
-          
         }
       }
 
@@ -155,61 +202,24 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .finance-mgt-summary-view {
-    width: $tablet;
+    width: $laptop;
     .finance-mgt-summary-view-title {
-      font-size: $afs;
+      font-size: $lfs;
       text-align: center;
     }
-    .members-contribution-pie-chart-container {
-      position: relative;
-
-      .members-contribution-pie-chart-title {
-        font-size: $nfs;
-        margin-top: 4rem;
-      }
-
-      .illustration {
-        font-size: $nfs;
-
-        .count-mark {
-          font-size: $nfs;
-        }
-      }
-
-      .members-contribution-pie-chart-form {
-        @include flexRow;
-        position: absolute;
-        top: -3rem;
-        left: 0;
-        .input-field {
-          font-size: $nfs;
-      
-        }
-
-        .members-contribution-pie-chart-form-btn {
-          font-size: $nfs;
-          
-        }
-      }
-
-      .message-error {
-        font-size: $nfs;
-      }
-    }
-
-    .recharts-legend-wrapper {
-      display: none;
-    }
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
-}
-
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
+  .finance-mgt-summary-view {
+    width: $desktop;
+    .finance-mgt-summary-view-title {
+      font-size: $lfs;
+      text-align: center;
+    }
+  }
 }
