--- a/frontend/src/components/parishAdmin/adminDashboardSummary/AdminDashboardSummary.scss
+++ b/frontend/src/components/parishAdmin/adminDashboardSummary/AdminDashboardSummary.scss
@@ -4,7 +4,6 @@
 .admin-dashboard-summary {
   width: 100%;
   @include flexColumn;
-  padding: 2rem;
 
   .admin-dashboard-summary-title {
     @include title;
@@ -13,37 +12,30 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .admin-dashboard-summary {
-    width: $mobile;
-    margin:  auto;
     padding: 1rem;
     .admin-dashboard-summary-title {
       font-size: $sfs;
-     margin: 0 0 1rem 0;
+      margin: 0 0 1rem 0;
     }
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .admin-dashboard-summary {
-    width: $mobile;
-    margin:  auto;
     padding: 1rem;
     .admin-dashboard-summary-title {
       font-size: $sfs;
-     
     }
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .admin-dashboard-summary {
-    width: $tablet;
-    margin:  auto;
     padding: 1rem;
     .admin-dashboard-summary-title {
       font-size: $afs;
@@ -51,18 +43,22 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .admin-dashboard-summary {
-    width: $laptop;
-    margin:  auto;
     padding: 1rem;
     .admin-dashboard-summary-title {
-      font-size: $afs;
+      font-size: $aafs;
     }
   }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
+  .admin-dashboard-summary {
+    padding: 1rem;
+    .admin-dashboard-summary-title {
+      font-size: $aafs;
+    }
+  }
 }
