--- a/frontend/src/components/parishAdmin/eventDetails/EventInfos.scss
+++ b/frontend/src/components/parishAdmin/eventDetails/EventInfos.scss
@@ -7,7 +7,6 @@
 
   .event-information-title {
     @include subTitle;
-    font-size: $aafs;
   }
 
   .event-year-form {
@@ -106,8 +105,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .events-information-container {
     position: relative;
 
@@ -182,8 +181,8 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .events-information-container {
     position: relative;
 
@@ -258,8 +257,8 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .events-information-container {
     position: relative;
 
@@ -334,10 +333,82 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .events-information-container {
+    position: relative;
+
+    .event-information-title {
+      margin: 0 0 5rem 0;
+      font-size: $afs;
+    }
+
+    .event-year-form {
+      position: absolute;
+      top: 3rem;
+      left: 0;
+
+      .input-field {
+        width: 10rem;
+        font-size: $sfs;
+      }
+
+      .year-form-btn {
+        font-size: $sfs;
+      }
+    }
+
+    .event-infos-wrapper {
+      .event-title {
+        font-size: $nfs;
+      }
+
+      .event-box {
+        @include twoGridTemplateEqualColumns;
+        column-gap: 2rem;
+
+        .left-event-box {
+          padding: 0 1rem;
+          font-size: $sfs;
+          .event-status {
+            font-size: $sfs;
+
+            .span {
+              width: 10rem;
+              font-size: $sfs;
+            }
+          }
+
+          .event-link {
+            font-size: $sfs;
+            margin: 0.6rem 0;
+
+            .view {
+              font-size: $sfs;
+            }
+          }
+        }
+
+        .right-event-box {
+          padding: 0 1rem;
+
+          .event-facilitators-list {
+            .event-facilitator {
+              font-size: $sfs;
+              @include flexColumn;
+
+              .facilitator {
+                width: 95%;
+                font-size: $sfs;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
 }
