--- a/frontend/src/components/parishAdmin/events/Events.scss
+++ b/frontend/src/components/parishAdmin/events/Events.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/Mixins.scss";
 
 .events-section-wrapper {
-  width: $laptop;
+  width: $mobile;
   margin: 2rem auto;
 
   .events-list-title {
@@ -49,8 +49,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .events-section-wrapper {
     width: $mobile;
     margin: 2rem auto;
@@ -98,8 +98,8 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .events-section-wrapper {
     width: $mobile;
     margin: 2rem auto;
@@ -145,8 +145,8 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .events-section-wrapper {
     width: $tablet;
 
@@ -188,10 +188,10 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
 }
