--- a/frontend/src/components/parishAdmin/layout/adminDashboardView/AdminDashboardView.scss
+++ b/frontend/src/components/parishAdmin/layout/adminDashboardView/AdminDashboardView.scss
@@ -1,37 +1,40 @@
-@import '../../../../styles/Variables.scss';
-@import '../../../../styles/Mixins.scss';
+@import "../../../../styles/Variables.scss";
+@import "../../../../styles/Mixins.scss";
 
 .admin-dashboard-right-box-wrapper {
-  width: $laptop;
+  width: $mobile;
   margin: 1rem auto;
+  
 }
 
-
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .admin-dashboard-right-box-wrapper {
     width: $mobile;
+    margin: 1rem auto;
+  }
+ 
+}
+
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .admin-dashboard-right-box-wrapper {
+    width: $mobileLandscape;
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
-  .admin-dashboard-right-box-wrapper {
-    width: $mobile;
-  }
-}
-
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .admin-dashboard-right-box-wrapper {
     width: $tablet;
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
-
-
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .admin-dashboard-right-box-wrapper {
+    width: $laptop;
+  }
 }
 
 /* 1201px and up (large desktop and TV screens) */
