--- a/frontend/src/components/parishAdmin/masses/Masses.scss
+++ b/frontend/src/components/parishAdmin/masses/Masses.scss
@@ -4,7 +4,6 @@
 .masses-container {
   max-width: 100%;
   text-align: center;
-  margin: 2rem;
 
   .masses-title {
     @include subTitle;
@@ -12,30 +11,30 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .masses-container {
     max-width: 100%;
-    margin: 0.5rem;
+
     .masses-title {
       font-size: $nfs;
     }
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .masses-container {
     max-width: 100%;
-    margin: 1rem;
+
     .masses-title {
       font-size: $afs;
     }
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .masses-container {
     .masses-title {
       font-size: $aafs;
@@ -43,10 +42,10 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
 }
