--- a/frontend/src/components/parishAdmin/subscribers/SubscriberNotification.scss
+++ b/frontend/src/components/parishAdmin/subscribers/SubscriberNotification.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/Mixins.scss";
 
 .subscribers-notification-wrapper {
-  width: $laptop;
+  width: $mobile;
   margin: 2rem auto;
   background-color: $form-bg;
   padding: 1rem 2rem;
@@ -45,8 +45,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .subscribers-notification-wrapper {
     width: $mobile;
     padding: 1rem;
@@ -85,8 +85,8 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .subscribers-notification-wrapper {
     width: $tablet;
     padding: 1rem;
@@ -125,14 +125,26 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .subscribers-notification-wrapper {
+    width: $tablet;
+    padding: 1rem;
+  }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .subscribers-notification-wrapper {
+    width: $laptop;
+    padding: 1rem;
+  }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
+  .subscribers-notification-wrapper {
+    width: $desktop;
+    padding: 1rem;
+  }
 }
