--- a/frontend/src/components/parishAdmin/videoUpload/VideoUpload.scss
+++ b/frontend/src/components/parishAdmin/videoUpload/VideoUpload.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/variables.scss";
 
 .video-upload-container {
-  max-width: $laptop;
+  max-width: $mobile;
   margin: 2rem auto;
   background-color: $form-bg;
   padding: 1rem 2rem;
@@ -62,8 +62,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .video-upload-container {
     max-width: $mobile;
     padding: 1rem;
@@ -71,7 +71,7 @@
     .video-upload-title {
       font-size: $nfs;
       padding: 0;
-      text-align: center
+      text-align: center;
     }
 
     .video-upload-form {
@@ -110,16 +110,16 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .video-upload-container {
-    max-width: $tablet;
+    max-width: $mobileLandscape;
     padding: 1rem;
 
     .video-upload-title {
       font-size: $afs;
       padding: 0;
-      text-align: center
+      text-align: center;
     }
 
     .video-upload-form {
@@ -160,12 +160,21 @@
 
 /* Between 769px and 1024px (ideal for tablets and small laptops) */
 @media (min-width: 769px) and (max-width: 1024px) {
+  .video-upload-container {
+    max-width: $tablet;
+  }
 }
 
 /* Between 1025px and 1200px (standard desktops) */
 @media (min-width: 1025px) and (max-width: 1200px) {
+  .video-upload-container {
+    max-width: $laptop;
+  }
 }
 
 /* 1201px and up (large desktop and TV screens) */
 @media (min-width: 1201px) {
+  .video-upload-container {
+    max-width: $desktop;
+  }
 }
