--- a/frontend/src/components/parishPriest/allEvents/AllEvents.scss
+++ b/frontend/src/components/parishPriest/allEvents/AllEvents.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/mixins.scss";
 
 .church-events-table-container {
-  width: $laptop;
+  width: $mobile;
   margin: 1rem auto;
 
   .church-events-table-title {
@@ -12,8 +12,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .church-events-table-container {
     width: $mobile;
 
@@ -23,10 +23,10 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .church-events-table-container {
-    width: $tablet;
+    width: $mobileLandscape;
 
     .church-events-table-title {
       font-size: $afs;
@@ -34,14 +34,29 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .church-events-table-container {
+    .church-events-table-title {
+      font-size: $aafs;
+    }
+  }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .church-events-table-container {
+    .church-events-table-title {
+      font-size: $lfs;
+    }
+  }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
+  .church-events-table-container {
+    .church-events-table-title {
+      font-size: $lfs;
+    }
+  }
 }
