--- a/frontend/src/components/parishPriest/dashboardSummary/DashboardSummary.scss
+++ b/frontend/src/components/parishPriest/dashboardSummary/DashboardSummary.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/Mixins.scss";
 
 .priest-dashboard-summary {
-  width: $laptop;
+  width: $mobile;
   margin: 1rem auto;
 
   .priest-dashboard-summary-title {
@@ -10,43 +10,47 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .priest-dashboard-summary {
-    width: $mobile;
-
     .priest-dashboard-summary-title {
       font-size: $nfs;
     }
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .priest-dashboard-summary {
-    width: $mobile;
-
     .priest-dashboard-summary-title {
       font-size: $afs;
     }
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .priest-dashboard-summary {
-    width: $tablet;
-
     .priest-dashboard-summary-title {
       font-size: $aafs;
     }
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .priest-dashboard-summary {
+    .priest-dashboard-summary-title {
+      font-size: $lfs;
+    }
+  }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
+  .priest-dashboard-summary {
+    .priest-dashboard-summary-title {
+      font-size: $lfs;
+    }
+  }
 }
