--- a/frontend/src/components/parishPriest/layout/priestSidebar/PriestDashboardSidebar.scss
+++ b/frontend/src/components/parishPriest/layout/priestSidebar/PriestDashboardSidebar.scss
@@ -89,40 +89,36 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .parish-priest-dashboard-sidebar-wrapper {
     display: none;
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .parish-priest-dashboard-sidebar-wrapper {
     display: none;
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .parish-priest-dashboard-sidebar-wrapper {
     display: none;
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
-  .parish-priest-dashboard-sidebar-container {
-    min-height: 100vh;
-
-    .priest-sidebar-hamburger-menu {
-      display: none;
-    }
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .parish-priest-dashboard-sidebar-wrapper {
+    display: none;
   }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
   .parish-priest-dashboard-sidebar-container {
     min-height: 100vh;
 
