--- a/frontend/src/components/user/contribution/MonthlyContribution.scss
+++ b/frontend/src/components/user/contribution/MonthlyContribution.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/Mixins.scss";
 
 .user-monthly-contribution-container {
-  width: $laptop;
+  width: $mobile;
   margin: 1rem auto;
   .user-monthly-contribution-title {
     @include subTitle;
@@ -10,8 +10,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .user-monthly-contribution-container {
     width: $mobile;
     margin: 0.1rem auto;
@@ -22,10 +22,10 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .user-monthly-contribution-container {
-    width: $mobile;
+    width: $mobileLandscape;
     margin: 0.1rem auto;
     .user-monthly-contribution-title {
       font-size: $afs;
@@ -34,14 +34,38 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .user-monthly-contribution-container {
+    width: $tablet;
+    margin: 0.1rem auto;
+    .user-monthly-contribution-title {
+      font-size: $afs;
+      margin: 0.1rem 0 2rem 0;
+    }
+  }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .user-monthly-contribution-container {
+    width: $laptop;
+    margin: 0.1rem auto;
+    .user-monthly-contribution-title {
+      font-size: $aafs;
+      margin: 0.1rem 0 2rem 0;
+    }
+  }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
+  .user-monthly-contribution-container {
+    width: $desktop;
+    margin: 0.1rem auto;
+    .user-monthly-contribution-title {
+      font-size: $aafs;
+      margin: 0.1rem 0 2rem 0;
+    }
+  }
 }
