--- a/frontend/src/components/user/userProfileSidebar/UserProfileSidebar.scss
+++ b/frontend/src/components/user/userProfileSidebar/UserProfileSidebar.scss
@@ -103,8 +103,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .user-profile-sidebar-wrapper {
     width: 100%;
 
@@ -119,8 +119,26 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .user-profile-sidebar-wrapper {
+    width: 100%;
+
+    .user-sidebar-hamburger-menu {
+      position: absolute;
+      top: 1rem;
+      right: 2rem;
+      font-size: $afs;
+    }
+
+    .user-sidebar-menu-container {
+      display: none;
+    }
+  }
+}
+
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .user-profile-sidebar-wrapper {
     width: 100%;
 
@@ -137,8 +155,8 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .user-profile-sidebar-wrapper {
     width: 100%;
 
@@ -155,20 +173,8 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
-  .user-profile-sidebar-wrapper {
-    padding-left: 1rem;
-    min-height: 100vh;
-
-    .user-sidebar-hamburger-menu {
-      display: none;
-    }
-  }
-}
-
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
   .user-profile-sidebar-wrapper {
     padding-left: 1rem;
     min-height: 100vh;
