--- a/frontend/src/views/aboutPage/AboutPage.scss
+++ b/frontend/src/views/aboutPage/AboutPage.scss
@@ -3,8 +3,9 @@
 
 .about-page {
   .about-page-container {
-    width: $desktop;
+    width: $mobile;
     margin: 2rem auto;
+    min-height: 100vh;
 
     .about-page-title {
       @include title;
@@ -12,8 +13,8 @@
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .about-page {
     .about-page-container {
       width: $mobile;
@@ -26,8 +27,22 @@
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .about-page {
+    .about-page-container {
+      width: $mobileLandscape;
+
+      .about-page-title {
+        font-size: $afs;
+      }
+    }
+  }
+}
+
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .about-page {
     .about-page-container {
       width: $tablet;
@@ -39,30 +54,17 @@
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .about-page {
     .about-page-container {
       width: $laptop;
-
-      .about-page-title {
-        font-size: $aafs;
-      }
     }
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
-  .about-page {
-    .about-page-container {
-      width: $desktop;
-    }
-  }
-}
-
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (2560px and above) */
+@media (min-width: 1367px) {
   .about-page {
     .about-page-container {
       width: $desktop;
