--- a/frontend/src/views/contactPage/ContactPage.scss
+++ b/frontend/src/views/contactPage/ContactPage.scss
@@ -5,42 +5,86 @@
   .contact-page-container {
     width: $mobile;
     margin: 1rem auto;
+    min-height: 100vh;
 
     .contact-page-title {
       @include title;
     }
+
+    .tools-form-wrapper {
+      @include flexColumn;
+    }
   }
 }
 
-/* Tablet screen size */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
+  .contact-page {
+    .contact-page-container {
+      .contact-page-title {
+        font-size: $nfs;
+      }
+    }
+  }
+}
+
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .contact-page {
+    .contact-page-container {
+      width: $mobileLandscape;
+      margin: 1rem auto;
+
+      .contact-page-title {
+        font-size: $afs;
+      }
+    }
+  }
+}
+
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .contact-page {
     .contact-page-container {
       width: $tablet;
       margin: 1rem auto;
 
       .contact-page-title {
-        @include title;
+        font-size: $afs * 1,1;
       }
     }
   }
 }
 
-/* Labtop screen size */
-@media screen and (min-width: 1024px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
   .contact-page {
     .contact-page-container {
       width: $laptop;
       margin: 1rem auto;
 
       .contact-page-title {
-        @include title;
+        font-size: $aafs;
       }
-
       .tools-form-wrapper {
-        display: grid;
-        grid-template-columns: 30% 70%;
-        column-gap: 1rem;
+        @include flexRow;
+      }
+    }
+  }
+}
+
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
+  .contact-page {
+    .contact-page-container {
+      width: $desktop;
+      margin: 1rem auto;
+
+      .contact-page-title {
+        font-size: $lfs;
+      }
+      .tools-form-wrapper {
+        @include flexRow;
       }
     }
   }
