--- a/frontend/src/views/priestPages/priestDashboardPage/PriestDashboardPage.scss
+++ b/frontend/src/views/priestPages/priestDashboardPage/PriestDashboardPage.scss
@@ -10,49 +10,52 @@
     }
 
     .parish-priest-dashboard-wrapper {
-      @include flexRow;
+      @include flexColumn;
     }
   }
 }
 
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .parish-priest-dashboard-page {
     .parish-priest-dashboard-page-container {
       .parish-priest-dashboard-page-title {
         font-size: $nfs;
         background-color: $mobile-header-bg;
       }
-
-      .parish-priest-dashboard-wrapper {
-        @include flexColumn;
-      }
     }
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
   .parish-priest-dashboard-page {
     .parish-priest-dashboard-page-container {
       .parish-priest-dashboard-page-title {
         font-size: $afs;
       }
-
-      .parish-priest-dashboard-wrapper {
-        @include flexColumn;
-      }
     }
   }
 }
 
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
   .parish-priest-dashboard-page {
     .parish-priest-dashboard-page-container {
       .parish-priest-dashboard-page-title {
         font-size: $aafs;
       }
+    }
+  }
+}
+
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .parish-priest-dashboard-page {
+    .parish-priest-dashboard-page-container {
+      .parish-priest-dashboard-page-title {
+        font-size: $lfs;
+      }
 
       .parish-priest-dashboard-wrapper {
         @include flexColumn;
@@ -61,10 +64,17 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
-}
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
+  .parish-priest-dashboard-page {
+    .parish-priest-dashboard-page-container {
+      .parish-priest-dashboard-page-title {
+        font-size: $lfs;
+      }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+      .parish-priest-dashboard-wrapper {
+        @include flexRow;
+      }
+    }
+  }
 }
